@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-11-09 Kimmo
+ PATCH: [ 1591532 ] Remove unused XmlDoc class
+  Src: Merge.dsp
+  Src removed files: XmlDoc.cpp XmlDoc.h
+
 2006-11-07 Kimmo
  Add PCRE 6.7 (with windows build files from ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/Contrib/)
   New folder: /Externals/pcre
